--- a/src/website/templates/website/product_list.html
+++ b/src/website/templates/website/product_list.html
@@ -332,9 +332,9 @@
                                                                                 >{{ object.title }}</a>
                                                                             </h3>
                                                                             <div class="product_price">
-                                                                                <span class="sale_price pe-1">{{ object.get_discounted_price_with_tax }}</span>
+                                                                                <span class="sale_price pe-1">{{ object.get_price }}</span>
                                                                                 {% if object.discount %}
-                                                                                    <del>{{ object.get_price_with_tax }}</del>
+                                                                                    <del>{{ object.price }}</del>
                                                                                 {% endif %}
                                                                             </div>
                                                                         </div>
