--- a/src/website/templates/website/contact_us.html
+++ b/src/website/templates/website/contact_us.html
@@ -21,12 +21,8 @@
                         </div>
                         <div class="col-lg-6">
                             <p class="contact_top_desc aos-init aos-animate" data-aos="fade-left"
-                               data-aos-duration="2000">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Praesent molestie nec nisl eget scelerisque. Quisque placerat suscipit eros, eu
-                                tincidunt tellus blandit vel. Donec pellentesque dapibus interdum. Mauris et
-                                tellus congue, rutrum neque a, varius felis. Phasellus nibh diam, tincidunt nec
-                                risus ut, auctor gravida metus.</p>
-                            <a href="#!">
+                               data-aos-duration="2000">Welcome to Rajasthan Dryfruit House, where tradition meets taste in every bite. With over 50 years of expertise in the industry, we have been committed to bringing you the finest quality dry fruits and mouth fresheners that tantalize your taste buds and elevate your snacking experience...</p>
+                            <a href="{% url 'website:about_us' %}">
                                 <button type="button"
                                         class="btn custom_btn load_more_1 rounded-pill px-3 px-sm-4 py-3 text-white text-uppercase">
                                     Read
