--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -37,14 +37,14 @@
                                  alt="image_not_found">
                         </div>
                         <div class="banner_title2">
-                            <h1 class="text-white">Organic Veggies &amp; Foods You Cook<font class="text-effect">
+                            <h1 class="text-white">Discover the Finest Dry Fruits - Handpicked for Unmatched Freshness and Flavor!<font class="text-effect">
                                 <span>H</span><span>e</span><span>a</span><span>l</span><span>t</span><span>h</span><span>y</span>
                             </font>
                             </h1>
                         </div>
 
                         <div class="banner_btn">
-                            <a href="#!">
+                            <a href="{% url 'website:shop' %}">
                                 <button type="button" class="btn custom_btn rounded-pill px-5 py-3 text-white">Shop <i
                                         class="fas fa-long-arrow-alt-right"></i></button>
                             </a>
@@ -882,7 +882,7 @@
                             class="offer_delivery_content inner_p_all_70 d-flex align-items-center justify-content-between"
                             style="background-image: url({% static 'website/images/offer/offer5.png' %})">
                         <div class="offer_delivery_title">
-                            <span>100% <font>Secure Delivery</font> Without Contacting the Courier</span>
+                            <span><font>FRESH FROM OUR FARM -></font> FRESH FROM RDH</span>
                         </div>
                         <div class="offer_delivery_btn">
                             <a href="{% url 'website:shop' %}" class="custom_btn rounded-pill">
@@ -919,10 +919,10 @@
                             </div>
                             <div class="service_content_text">
                                 <div class="service_content_title">
-                                    <h6 class="text-uppercase">Free Shipping</h6>
+                                    <h6 class="text-uppercase">International Shipping</h6>
                                 </div>
                                 <div class="service_content_sub_title">
-                                    <span>Free on order over $300</span>
+                                    <span>International Shipping world wide</span>
                                 </div>
                             </div>
                         </div>
@@ -951,10 +951,10 @@
                             </div>
                             <div class="service_content_text">
                                 <div class="service_content_title">
-                                    <h6 class="text-uppercase">30 Day Return</h6>
+                                    <h6 class="text-uppercase">Cancel Order</h6>
                                 </div>
                                 <div class="service_content_sub_title">
-                                    <span>30 day money guarantee</span>
+                                    <span>14 day money guarantee</span>
                                 </div>
                             </div>
                         </div>
