--- a/templates/website/include/footer.html
+++ b/templates/website/include/footer.html
@@ -82,11 +82,11 @@
                                  </h4>
                               </div>
                               <div class="footer_inner_ctc_info pt-2 text-white">
-                                 <p>Address: <font>Delhi Mombai</font>
+                                 <p>Address: <font>123 Nut Lane, Orchard City, CA 90210</font>
                                  </p>
-                                 <p>Email: <font>dryfruitsofficial@gmail.com</font>
+                                 <p>Email: <font>support@rajasthandryfruitshouse.com</font>
                                  </p>
-                                 <p>Phone: <font>93:1221222112</font>
+                                 <p>Phone: <font>+91 81410 66633</font>
                                  </p>
                                  <div class="footer_inner_payment_ctc">
                                     <div class="footer_inner_payment_title">
@@ -108,7 +108,7 @@
                         <div class="row">
                            <div class="col-md-6">
                               <div class="footer_bootom_copyright">
-                                 <p>Copyright © 2022 <font>ORGANI</font> Inc. All rights reserved.</p>
+                                 <p>Copyright@2024 <font>JHWEBTECH</font> All Rights Reserved</p>
                               </div>
                            </div>
                            <div class="col-md-6">
