Feat:Content Has been Replaced chat plugin Remove

--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -3,7 +3,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from jthemes.net/themes/html/organic/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 24 Mar 2024 21:46:39 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -89,20 +88,20 @@
 <script type="text/javascript" src="{% static 'website/js/toastify.js' %}"></script>
 {% include 'messages.html' %}
 
-<script>
-    var Tawk_API = Tawk_API || {};
-    var Tawk_LoadStart = new Date();
-
-    (function () {
-        var s1 = document.createElement("script");
-        var s0 = document.getElementsByTagName("script")[0];
-        s1.async = true;
-        s1.src = 'https://embed.tawk.to/66560d619a809f19fb364b4e/1hv028hlk';
-        s1.charset = 'UTF-8';
-        s1.setAttribute('crossorigin', '*');
-        s0.parentNode.insertBefore(s1, s0);
-    })();
-</script>
+{#<script>#}
+{#    var Tawk_API = Tawk_API || {};#}
+{#    var Tawk_LoadStart = new Date();#}
+{##}
+{#    (function () {#}
+{#        var s1 = document.createElement("script");#}
+{#        var s0 = document.getElementsByTagName("script")[0];#}
+{#        s1.async = true;#}
+{#        s1.src = 'https://embed.tawk.to/66560d619a809f19fb364b4e/1hv028hlk';#}
+{#        s1.charset = 'UTF-8';#}
+{#        s1.setAttribute('crossorigin', '*');#}
+{#        s0.parentNode.insertBefore(s1, s0);#}
+{#    })();#}
+{#</script>#}
 
 </body>
 
