--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="col-lg-7 ms-3">
                         <div class="banner_sub_title2 position-relative">
-                            <h6 class="text-white text-uppercase position-absolute">100% Organic Foods</h6>
+                            <h6 class="text-white text-uppercase position-absolute">Superior Quality</h6>
                             <img class="sub_title_bg" src="{% static 'website/images/shapes/shape.png' %}"
                                  alt="image_not_found">
                         </div>
@@ -78,7 +78,7 @@
                             <i class="far fa-circle"></i>
                             <i class="far fa-circle"></i>
                             <i class="far fa-circle"></i>
-                            <span class="ps-2">FRESH FROM OUR FARM</span>
+                            <span class="ps-2">NATURE'S BEST SELECTION</span>
                         </div>
                         <div class="category_title pb-3">
                             <h2>Popular Categories</h2>
@@ -138,7 +138,7 @@
                             <i class="far fa-circle"></i>
                             <i class="far fa-circle"></i>
                             <i class="far fa-circle"></i>
-                            <span class="ps-2">FRESH FROM OUR FARM</span>
+                            <span class="ps-2">NATURE'S BEST SELECTION</span>
                         </div>
                         <h2 class="product_sec_title pb-3">Our Organic Products</h2>
                     </div>
@@ -580,7 +580,7 @@
                              style="background-image: url('{% static 'website/images/deals/deals1.png' %}');">
                             <div class="deal_item_txt position-absolute">
                                 <div class="deal_sub_title">
-                                    <h5 class="text-white">FRESH FROM OUR FARM</h5>
+                                    <h5 class="text-white">NATURE'S BEST SELECTION</h5>
                                 </div>
                                 <div class="deal_title"
                                 >
@@ -603,7 +603,7 @@
                         >
                             <div class="deal_item_txt position-absolute">
                                 <div class="deal_sub_title">
-                                    <h5 class="text-white">FRESH FROM OUR FARM</h5>
+                                    <h5 class="text-white">NATURE'S BEST SELECTION</h5>
                                 </div>
                                 <div class="deal_title "
                                 >
@@ -626,7 +626,7 @@
                         >
                             <div class="deal_item_txt position-absolute">
                                 <div class="deal_sub_title">
-                                    <h5 class="text-white">FRESH FROM OUR FARM</h5>
+                                    <h5 class="text-white">NATURE'S BEST SELECTION</h5>
                                 </div>
                                 <div class="deal_title">
                                     <h3 class="text-white">First Deal Dry Fruit You Need</h3>
@@ -656,7 +656,7 @@
                             <i class="far fa-circle"></i>
                             <i class="far fa-circle"></i>
                             <i class="far fa-circle"></i>
-                            <span class="ps-2">FRESH FROM OUR FARM</span>
+                            <span class="ps-2">NATURE'S BEST SELECTION</span>
                         </div>
                         <h2 class="product_sec_title pb-3">Popular Organic Discount</h2>
                     </div>
@@ -740,7 +740,7 @@
                             <i class="far fa-circle"></i>
                             <i class="far fa-circle"></i>
                             <i class="far fa-circle"></i>
-                            <span class="ps-2">FRESH FROM OUR FARM</span>
+                            <span class="ps-2">NATURE'S BEST SELECTION</span>
                         </div>
                         <h2 class="product_sec_title pb-3">Best Selling Products</h2>
                     </div>
@@ -823,7 +823,7 @@
                     <i class="far fa-circle"></i>
                     <i class="far fa-circle"></i>
                     <i class="far fa-circle"></i>
-                    <span class="text-uppercase px-2">FRESH FROM OUR FARM</span>
+                    <span class="text-uppercase px-2">NATURE'S BEST SELECTION</span>
                     <i class="far fa-circle"></i>
                     <i class="far fa-circle"></i>
                     <i class="far fa-circle"></i>
@@ -882,7 +882,7 @@
                             class="offer_delivery_content inner_p_all_70 d-flex align-items-center justify-content-between"
                             style="background-image: url({% static 'website/images/offer/offer5.png' %})">
                         <div class="offer_delivery_title">
-                            <span><font>FRESH FROM OUR FARM -></font> FRESH FROM RDH</span>
+                            <span><font>NATURE'S BEST SELECTION -></font> FRESH FROM RDH</span>
                         </div>
                         <div class="offer_delivery_btn">
                             <a href="{% url 'website:shop' %}" class="custom_btn rounded-pill">
