--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -130,6 +130,9 @@
                                 <li class="nav-item nav_item_has_child dropdown px-2">
                                     <a class="nav-link" href="{% url 'website:contact_us' %}">Contact Us</a>
                                 </li>
+                                  <li class="nav-item nav_item_has_child dropdown px-2">
+                                <a class="nav-link" href="{% url 'website:franchise' %}">Franchise</a>
+                            </li>
                             </ul>
                         </div>
                     </div>
